@@ -8,6 +8,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import java.nio.charset.Charset;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -46,7 +47,7 @@ public class RoutesControllerTest {
 
 	@Test
 	public void createSession_returnsSession() throws Exception {
-		val sessionConfigJson = sessionConfigToJson(new SessionConfig(Arrays.asList("1", "2", "3"), null));
+		val sessionConfigJson = sessionConfigToJson(new SessionConfig(Arrays.asList("1", "2", "3"), List.of(), null));
 		this.mockMvc.perform(post("/sessions").contentType(APPLICATION_JSON_UTF8).content(sessionConfigJson))
 				.andExpect(status().isCreated()).andExpect(jsonPath("$.sessionID").isNotEmpty())
 				.andExpect(jsonPath("$.adminID").isNotEmpty()).andExpect(jsonPath("$.membersID").isNotEmpty())
@@ -55,7 +56,8 @@ public class RoutesControllerTest {
 
 	@Test
 	public void createProtectedSession_returnsSession() throws Exception {
-		val sessionConfigJson = sessionConfigToJson(new SessionConfig(Arrays.asList("1", "2", "3"), "testPassword"));
+		val sessionConfigJson = sessionConfigToJson(
+				new SessionConfig(Arrays.asList("1", "2", "3"), List.of(), "testPassword"));
 		this.mockMvc.perform(post("/sessions").contentType(APPLICATION_JSON_UTF8).content(sessionConfigJson))
 				.andExpect(status().isCreated()).andExpect(jsonPath("$.sessionID").isNotEmpty())
 				.andExpect(jsonPath("$.adminID").isNotEmpty()).andExpect(jsonPath("$.membersID").isNotEmpty())
@@ -71,7 +73,8 @@ public class RoutesControllerTest {
 	public void joinMember_addsMemberToSession() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(),
-				new SessionConfig(new ArrayList<>(), null), new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
+				new SessionConfig(new ArrayList<>(), List.of(), null), new ArrayList<Member>(),
+				SessionState.WAITING_FOR_MEMBERS));
 
 		// @formatter:off
 		var memberAsJson = "{" + "'member': {" + "'memberID': '365eef59-931d-0000-0000-2ba016cb523b',"
@@ -88,7 +91,7 @@ public class RoutesControllerTest {
 	public void joinMember_addsMemberToProtectedSession() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		val password = "testPassword";
-		SessionConfig sessionConfig = new SessionConfig(new ArrayList<>(), password);
+		SessionConfig sessionConfig = new SessionConfig(new ArrayList<>(), List.of(), password);
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(), sessionConfig,
 				new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
 
@@ -107,7 +110,7 @@ public class RoutesControllerTest {
 	public void joinMember_failsToAddMemberToProtectedSessionWrongPassword() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		val password = "testPassword";
-		SessionConfig sessionConfig = new SessionConfig(new ArrayList<>(), password);
+		SessionConfig sessionConfig = new SessionConfig(new ArrayList<>(), List.of(), password);
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(), sessionConfig,
 				new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
 
@@ -128,7 +131,7 @@ public class RoutesControllerTest {
 	public void joinMember_failsToAddMemberToProtectedSessionNullPassword() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		val password = "testPassword";
-		SessionConfig sessionConfig = new SessionConfig(new ArrayList<>(), password);
+		SessionConfig sessionConfig = new SessionConfig(new ArrayList<>(), List.of(), password);
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(), sessionConfig,
 				new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
 
@@ -149,7 +152,8 @@ public class RoutesControllerTest {
 	public void joinMember_failsToAddMemberDueToFalseAvatarAnimal() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(),
-				new SessionConfig(new ArrayList<>(), null), new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
+				new SessionConfig(new ArrayList<>(), List.of(), null), new ArrayList<Member>(),
+				SessionState.WAITING_FOR_MEMBERS));
 
 		// @formatter:off
 		var memberAsJson = "{" + "'member': {" + "'memberID': '365eef59-931d-0000-0000-2ba016cb523b',"
@@ -166,7 +170,8 @@ public class RoutesControllerTest {
 	public void joinMember_failsToAddMemberDueToFalseAvatarAnimal2() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(),
-				new SessionConfig(new ArrayList<>(), null), new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
+				new SessionConfig(new ArrayList<>(), List.of(), null), new ArrayList<Member>(),
+				SessionState.WAITING_FOR_MEMBERS));
 
 		// @formatter:off
 		var memberAsJson = "{" + "'member': {" + "'memberID': '365eef59-931d-0000-0000-2ba016cb523b',"
@@ -183,7 +188,8 @@ public class RoutesControllerTest {
 	public void joinMember_failsToAddMemberDueToFalseEstimation() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(),
-				new SessionConfig(new ArrayList<>(), null), new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
+				new SessionConfig(new ArrayList<>(), List.of(), null), new ArrayList<Member>(),
+				SessionState.WAITING_FOR_MEMBERS));
 
 		// @formatter:off
 		var memberAsJson = "{" + "'member': {" + "'memberID': '365eef59-931d-0000-0000-2ba016cb523b',"
@@ -217,7 +223,8 @@ public class RoutesControllerTest {
 	public void joinMember_addsMemberNotIfAlreadyExisting() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(),
-				new SessionConfig(new ArrayList<>(), null), new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
+				new SessionConfig(new ArrayList<>(), List.of(), null), new ArrayList<Member>(),
+				SessionState.WAITING_FOR_MEMBERS));
 
 		// @formatter:off
 		var memberAsJson = "{" + "'member': {" + "'memberID': '365eef59-931d-0000-0000-2ba016cb523b',"
@@ -240,7 +247,8 @@ public class RoutesControllerTest {
 	public void getSession_returnsSession() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(),
-				new SessionConfig(new ArrayList<>(), null), new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
+				new SessionConfig(new ArrayList<>(), List.of(), null), new ArrayList<Member>(),
+				SessionState.WAITING_FOR_MEMBERS));
 
 		this.mockMvc.perform(get("/sessions/{sessionID}", sessionUUID)).andExpect(status().isOk())
 				.andExpect(jsonPath("$.sessionID").isNotEmpty()).andExpect(jsonPath("$.adminID").isNotEmpty())
@@ -251,7 +259,8 @@ public class RoutesControllerTest {
 	public void getSession_failsWrongID() throws Exception {
 		val sessionUUID = UUID.randomUUID();
 		sessionRepo.save(new Session(sessionUUID, UUID.randomUUID(), UUID.randomUUID(),
-				new SessionConfig(new ArrayList<>(), null), new ArrayList<Member>(), SessionState.WAITING_FOR_MEMBERS));
+				new SessionConfig(new ArrayList<>(), List.of(), null), new ArrayList<Member>(),
+				SessionState.WAITING_FOR_MEMBERS));
 
 		this.mockMvc.perform(get("/sessions/{sessionID}", UUID.randomUUID())).andExpect(status().isNotFound())
 				.andExpect(status().reason(ErrorMessages.sessionNotFoundErrorMessage));
